[project]
name = "trading-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datetime>=5.5",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "streamlit>=1.45.1",
    "ta>=0.11.0",
    "yfinance>=0.2.61",
]
